--- a/src/main/webapp/resources/theme/login/css/login.css
+++ b/src/main/webapp/resources/theme/login/css/login.css
@@ -1,66 +1,139 @@
-#center-area {
-    height: 350px;
-    margin: auto;
+body{background: #eee url("/resources/img/subtle_dots.png");}
+
+html,body{
+    position: relative;
+    height: 100%;
+}
+
+.login-container{
+    position: relative;
+    width: 300px;
+    margin: 80px auto;
+    padding: 20px 40px 40px;
+    text-align: center;
+    background: #fff;
+    border: 1px solid #ccc;
+}
+
+#output{
     position: absolute;
-    top: 0; left: 0; bottom: 0; right: 0;
+    width: 300px;
+    top: -75px;
+    left: 0;
+    color: #fff;
 }
 
-.hero-unit {
-    padding: 30px;
-    font-size: 18px;
-    font-weight: 200;
-    line-height: 30px;
-    color: inherit;
-    background-color: #eeeeee;
-    -webkit-border-radius: 6px;
-    -moz-border-radius: 6px;
-    border-radius: 6px;
-    margin-bottom: 0;
+#output.alert-success{
+    background: rgb(25, 204, 25);
 }
 
-.hero-unit h1 {
-    margin-bottom: 0;
-    font-size: 30px;
-    line-height: 1;
-    letter-spacing: -1px;
-    color: inherit;
+#output.alert-danger{
+    background: rgb(228, 105, 105);
 }
 
-.hero-unit h2 {
-    font-size: 20px;
-    font-weight: 200;
-    margin-top: 0;
-}
-.form-horizontal .control-label {
-    float: left;
-    width: 80px;
-    padding-top: 5px;
-    text-align: left;
+
+.login-container::before,.login-container::after{
+    content: "";
+    position: absolute;
+    width: 100%;height: 100%;
+    top: 3.5px;left: 0;
+    background: #fff;
+    z-index: -1;
+    -webkit-transform: rotateZ(4deg);
+    -moz-transform: rotateZ(4deg);
+    -ms-transform: rotateZ(4deg);
+    border: 1px solid #ccc;
+
 }
 
-.form-horizontal .controls {
-    *display: inline-block;
-    *padding-left: 20px;
-    margin-left: 50px;
-    *margin-left: 0;
+.login-container::after{
+    top: 5px;
+    z-index: -2;
+    -webkit-transform: rotateZ(-2deg);
+    -moz-transform: rotateZ(-2deg);
+    -ms-transform: rotateZ(-2deg);
+
 }
 
-.description {
-    font-size: 14px;
-    line-height: 1;
-    margin-left: 50px;
+.avatar{
+    width: 120px;height: 120px;
+    margin: 10px auto 30px;
+    border-radius: 100%;
+    border: 2px solid #aaa;
+    background-size: cover;
+    background-image: url("../img/admin_logo.png");
+
 }
 
-#signin {
-    margin-left: 0;
+.form-box input{
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+    height:40px;
+    border: 1px solid #ccc;;
+    background: #fafafa;
+    transition:0.2s ease-in-out;
+
 }
 
-#forgot-pass {
-    font-size: 14px;
+.form-box input:focus{
+    outline: 0;
+    background: #eee;
 }
 
-.login-msg {
-    margin-bottom: 0px;
-    font-size: 16px;
-    color: #FF3300;
+.form-box input[type="text"]{
+    border-radius: 5px 5px 0 0;
+    text-transform: lowercase;
+}
+
+.form-box input[type="password"]{
+    border-radius: 0 0 5px 5px;
+    border-top: 0;
+}
+
+.form-box button.login{
+    margin-top:15px;
+    padding: 10px 20px;
+}
+
+.animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+@-webkit-keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(20px);
+        transform: translateY(20px);
+    }
+
+    100% {
+        opacity: 1;
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(20px);
+        -ms-transform: translateY(20px);
+        transform: translateY(20px);
+    }
+
+    100% {
+        opacity: 1;
+        -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+
+.fadeInUp {
+    -webkit-animation-name: fadeInUp;
+    animation-name: fadeInUp;
 }
